--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyRecyclerView</string>
+    <string name="favorite">FAVORITE</string>
+    <string name="share">SHARE</string>
 </resources>
